@@ -1,0 +1,1 @@
+Use mingw32-make to build under MinGW-W64.
